--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "baseUrl": ".",
   "paths": {
-    "~/*": ["src/*"]
+    "~/*": [
+      "src/*"
+    ]
   }
 }
