--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.77.2",
     "sonner": "^1.4.41",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "zustand": "^4.5.2"
   }
 }
