--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "@astrojs/web-vitals": "^0.2.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
