--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.0.1",
-    "@astrojs/react": "^3.4.0",
-    "@astrojs/rss": "^4.0.6",
-    "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/mdx": "3.1.2",
+    "@astrojs/react": "3.6.0",
+    "@astrojs/rss": "4.0.7",
+    "@astrojs/sitemap": "3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.6.0",
+    "@astrojs/vercel": "7.7.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.9.1",
+    "astro": "4.11.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.14.0",
     "react": "^18.3.1",
