--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
